Fixed select's label for attribute

--- a/photographer.html
+++ b/photographer.html
@@ -24,7 +24,7 @@
 				<button aria-label="Contact Me" class="contact_button" onclick="displayModal()">Contactez-moi</button>
 			</div>
 			<div id="select">
-				<label for="oderSelect">Trier par</label>
+				<label for="orderSelect">Trier par</label>
 				<select name="orderSelect" id="orderSelect">
 					<option value="pop">Popularité</option>
 					<option value="date">Date</option>
